--- a/Tests_For_TestInfrastructure_Course/Tests_For_TestInfrastructure_Course.csproj
+++ b/Tests_For_TestInfrastructure_Course/Tests_For_TestInfrastructure_Course.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -8,18 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
-    <PackageReference Include="Noksa.NUnit.Allure" Version="2.5.2" />
     <PackageReference Include="nunit" Version="3.10.1" />
+    <PackageReference Include="NUnit.Allure" Version="1.0.5" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="74.0.3729.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Update="C:\Users\Roman_Borodavka\.nuget\packages\noksa.nunit.allure\2.5.2\contentFiles\any\netstandard2.0\allureConfig.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
 
 </Project>
