--- a/Tests_For_TestInfrastructure_Course/Tests_For_TestInfrastructure_Course.csproj
+++ b/Tests_For_TestInfrastructure_Course/Tests_For_TestInfrastructure_Course.csproj
@@ -13,12 +13,16 @@
     <PackageReference Include="NUnit.Allure" Version="1.0.5" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="ReportPortal.NUnit" Version="3.7.1" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="74.0.3729.6" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="allureConfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="ReportPortal.conf.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
