--- a/Tests_For_TestInfrastructure_Course/Tests_For_TestInfrastructure_Course.csproj
+++ b/Tests_For_TestInfrastructure_Course/Tests_For_TestInfrastructure_Course.csproj
@@ -11,8 +11,8 @@
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="nunit" Version="3.10.1" />
     <PackageReference Include="NUnit.Allure" Version="1.0.5" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.14.0-alpha" />
     <PackageReference Include="ReportPortal.NUnit" Version="3.7.1" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="74.0.3729.6" />
@@ -22,7 +22,7 @@
     <None Update="allureConfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="ReportPortal.conf.json">
+    <None Update="ReportPortal.config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
